odoo/odoo-db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: odoo
  name: odoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo
    template:
    metadata:
      name: odoo
      labels:
        app: odoo
    spec:
      containers:
      - name: odoo
        image: docker.io/library/odoo
        ports:
          - containerPort: 8069
      - name: db
        image: docker.io/library/postgres:10
