odoo/odoo-db-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: odoo
  labels:
    app: odoo
    tier: app
spec:
  containers:
  - name: odoo
    image: docker.io/library/odoo
    ports:
      - containerPort: 8069
  - name: db
    image: docker.io/library/postgres:10
