odoo/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    tier: db
    app: odoo
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo
      tier: db
  template:
    metadata:
      name: postgres
      labels:
        tier: db
        app: odoo
    spec:
      hostname: db
      subdomain: sub1
      containers:
      - name: postgres
        image: docker.io/library/postgres:10
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
          name: postgres
          protocol: TCP
#        volumeMounts:
#        - name: postgre-persistent-storage
#          mountPath: /var/lib/postgresql/data
#          subPath: postgres
#      volumes:
#        - name: postgre-persistent-storage
#          persistentVolumeClaim:
#            claimName: postgre-volumeclaim
