odoo/odoo-headless-only.yaml
apiVersion: v1
kind: Service
metadata:
  name: sub1
spec:
  selector:
    app: odoo
  clusterIP: None
  ports:
  - name: foo # Actually, no port is needed.
    port: 1234
    targetPort: 1234
