odoo/odoo-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: odoo
  name: odoo
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8069
      protocol: TCP
  selector:
    environment: testing
